[package]
name = "dev_bestia_string_utils"
version = "0.1.19"
description = "Library for string manipulation"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/dev_bestia_string_utils"
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["rust-patterns"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["string"]
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
log = "0.4.6"
unwrap="1.2.1"